--- a/roles/user/templates/user.service.j2
+++ b/roles/user/templates/user.service.j2
@@ -3,8 +3,8 @@ Description = User Service
 [Service]
 User=roboshop
 Environment=MONGO=true
-Environment=REDIS_URL='redis://redis.deeps.sbs:6379'
-Environment=MONGO_URL="mongodb://mongodb.deeps.sbs:27017/users"
+Environment=REDIS_URL='redis://{{ REDIS_HOST }}:6379'
+Environment=MONGO_URL="mongodb://{{ MONGODB_HOST }}:27017/users"
 ExecStart=/bin/node /app/server.js
 SyslogIdentifier=user
 
