--- a/roles/shipping/templates/shipping.service.j2
+++ b/roles/shipping/templates/shipping.service.j2
@@ -7,6 +7,7 @@ Environment=CART_ENDPOINT={{ CART_HOST }}:8080
 Environment=DB_HOST={{ MYSQL_HOST }}
 ExecStart=/bin/java -jar /app/shipping.jar
 SyslogIdentifier=shipping
+Restart=always
 
 [Install]
 WantedBy=multi-user.target
