--- a/roles/payment/templates/payment.service.j2
+++ b/roles/payment/templates/payment.service.j2
@@ -1,5 +1,6 @@
 [Unit]
 Description=Payment Service
+After=network.target
 
 [Service]
 User=roboshop
@@ -13,9 +14,8 @@ Environment=AMQP_HOST={{ RABBITMQ_HOST }}
 Environment=AMQP_USER={{ PAYMENT_USER }}
 Environment=AMQP_PASS={{ PAYMENT_PASSWORD }}
 
-
-ExecStart=/usr/local/bin/uwsgi --ini payment.ini
-ExecStop=/bin/kill -9 $MAINPID
+ExecStart=/usr/bin/node server.js
+Restart=always
 SyslogIdentifier=payment
 
 [Install]
