--- a/roles/payment/templates/payment.service.j2
+++ b/roles/payment/templates/payment.service.j2
@@ -1,22 +1,15 @@
-[Unit]
-Description=Payment Service
-
 [Service]
-User=roboshop
+User=root
 WorkingDirectory=/app
 
-Environment=CART_HOST=<CART-IP>
+Environment=CART_HOST=<cart-ip>
 Environment=CART_PORT=8080
-Environment=USER_HOST=<USER-IP>
+Environment=USER_HOST=<user-ip>
 Environment=USER_PORT=8080
-Environment=AMQP_HOST=<RABBITMQ-IP>
+Environment=AMQP_HOST=<rabbitmq-ip>
 Environment=AMQP_USER=roboshop
 Environment=AMQP_PASS=roboshop123
 
-# Override internal user switching
-ExecStart=/usr/local/bin/uwsgi --ini payment.ini --disable-logging --need-app --uid roboshop --gid roboshop
+ExecStart=/usr/local/bin/uwsgi --ini payment.ini
 ExecStop=/bin/kill -9 $MAINPID
 SyslogIdentifier=payment
-
-[Install]
-WantedBy=multi-user.target
