--- a/roles/payment/templates/payment.service.j2
+++ b/roles/payment/templates/payment.service.j2
@@ -1,15 +1,22 @@
+[Unit]
+Description=Payment Service
+After=network.target
+
 [Service]
-User=root
+User=roboshop
 WorkingDirectory=/app
 
-Environment=CART_HOST=<cart-ip>
+Environment=CART_HOST={{ CART_HOST }}
 Environment=CART_PORT=8080
-Environment=USER_HOST=<user-ip>
+Environment=USER_HOST={{ USER_HOST }}
 Environment=USER_PORT=8080
-Environment=AMQP_HOST=<rabbitmq-ip>
-Environment=AMQP_USER=roboshop
-Environment=AMQP_PASS=roboshop123
+Environment=AMQP_HOST={{ RABBITMQ_HOST }}
+Environment=AMQP_USER={{ PAYMENT_USER }}
+Environment=AMQP_PASS={{ PAYMENT_PASSWORD }}
 
 ExecStart=/usr/local/bin/uwsgi --ini payment.ini
-ExecStop=/bin/kill -9 $MAINPID
+Restart=always
 SyslogIdentifier=payment
+
+[Install]
+WantedBy=multi-user.target
