--- a/roles/payment/templates/payment.service.j2
+++ b/roles/payment/templates/payment.service.j2
@@ -6,15 +6,25 @@ After=network.target
 User=roboshop
 WorkingDirectory=/app
 
-Environment=CART_HOST={{ CART_HOST }}
+Environment=CART_HOST=cart.deeps.sbs
 Environment=CART_PORT=8080
-Environment=USER_HOST={{ USER_HOST }}
+Environment=USER_HOST=user.deeps.sbs
 Environment=USER_PORT=8080
-Environment=AMQP_HOST={{ RABBITMQ_HOST }}
-Environment=AMQP_USER={{ PAYMENT_USER }}
-Environment=AMQP_PASS={{ PAYMENT_PASSWORD }}
+Environment=AMQP_HOST=rabbitmq.deeps.sbs
+Environment=AMQP_USER=roboshop
+Environment=AMQP_PASS=roboshop123
 
-ExecStart=/usr/local/bin/uwsgi --ini payment.ini
+ExecStart=/usr/local/bin/uwsgi \
+    --chdir /app \
+    --wsgi-file payment.py \
+    --callable app \
+    --master \
+    --processes 1 \
+    --lazy-apps \
+    --enable-threads \
+    --socket 0.0.0.0:8080 \
+    --protocol http
+
 Restart=always
 SyslogIdentifier=payment
 
